SERVER-6588 - fix positional updates in new find_and_modify code